# kliff_torch

./: .clang-format  .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
devtool/: update_version.py
docs/: generate_apidoc.py
docs/source/: changelog.rst  conf.py
examples/: eg_Fisher_info_kim_SW.py  eg_RMSE_analysis_kim_SW.py  eg_RMSE_analysis_nn.py  eg_continue_nn_Si.py  example_kim_SW_Si.py  example_lennard_jones.py  multiple_calculators.py
kliff/: loss.py  opt.py  training_wheels.py
kliff/_calculators/: __init__.py
kliff/calculators/: calculator.py
kliff/dataset/: __init__.py  dataset.py  dataset_autoloader.py
kliff/descriptors/: descriptor.py
kliff/descriptors_new/: descriptor_module.py
kliff/models/: kim.py
kliff_torch/: __init__.py  log.py  loss.py  opt.py  parallel.py
kliff_torch/analyzers/: fisher.py  rmse.py
kliff_torch/cmdline/: cli.py  model.py
kliff_torch/dataset/: __init__.py  dataset.py  dataset_autoloader.py  dataset_torch.py  extxyz.py
kliff_torch/descriptors/: descriptor.py
kliff_torch/descriptors_new/: descriptor_module.py
kliff_torch/libdescriptor/: descriptor.py  libdescriptor_python_bindings.cpp
kliff_torch/models/: __init__.py  kim.py  lennard_jones.py  linear_regression.py  model.py  model_torch.py  neural_network.py  parameter.py
kliff_torch/neighbor/: CMakeLists.txt  __init__.py  _neighbor.py  neighbor.py  neighbor_new.py
kliff_torch/neighbor/generate_graph/: generate_graph.py  graph.cpp  torch_graph.cpp
tests/: test_neighbor.py  test_parallel.py  test_scipy_optimize.py
(+29 files in other folders)
